--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(3, 235, 235)
+    background-color: rgb(3, 235, 235);
     color black;
     text-align: justify;
     font-size: 30px;
