--- a/style.css
+++ b/style.css
@@ -4,3 +4,10 @@ body{
     text-align: justify;
     font-size: 30px;
 }
+
+h1{
+    background-color: black;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 40px;
+}
